--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "PhaserES6Webpack",
+  "name": "sunshower",
   "version": "1.0.0",
   "description": "",
-  "author": "leandro cabrera <leandcabrera@gmail.com>",
+  "author": "Jack Song <jackthesong@gmail.com>",
   "main": "index.js",
   "scripts": {
     "dev": "webpack",
@@ -25,7 +25,6 @@
     "webpack": "^2.5.0"
   },
   "dependencies": {
-    "phaser-ce": "^2.7.7",
-    "webfontloader": "^1.6.27"
+    "phaser-ce": "^2.7.7"
   }
 }
